# Demelpkgs

./: .gitignore  FLAKE-INFO.md  README.md  flake.nix  header.md
.github/workflows/: flake-check.yml
templates/: README.md
templates/ForgeGradle/: .gitignore
templates/forge-gradle/: flake.nix
templates/forge-gradle/nix/: shell.nix
templates/rust/: default.nix  flake.nix  flake.systems.nix
templates/rust-crane/: Cargo.toml  flake.nix  shell.nix
templates/rust-crane/nix/: default.nix
test/: flake.nix
